# speliuk

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: evaluate.py
speliuk/: correct.py  train.py
speliuk/configs/: spancat.cfg
