[tool.poetry]
name = "speliuk"
version = "0.0.2"
description = "Speliuk is a spell checker for the Ukrainian language based on SymSpell and Language Models."
authors = ["Oleh Neichev <oleg.neichev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.7.5"
kenlm = "0.2.0"
symspellpy = "^6.7.7"
ua-gec = "^2.1.3"
spacy-transformers = "^1.3.5"
pymorphy3 = "^2.0.2"
pymorphy3-dicts-uk = "^2.4.1.1.1663094765"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
nlpaug = "^1.1.11"
errant = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
